[package]
name = "vyges-cdc"
version = "0.1.18"
edition = "2021"
description = "Structural clock-domain-crossing (CDC) checker: netlist + clocks in, crossings out."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/cdc"

# Parsers (netlist / Liberty / SDC) come from the vyges-loom foundation.
[dependencies]
vyges-loom = { git = "https://github.com/vyges-tools/loom", branch = "main" }
# Structured events (vyges-events/1.0) for the MCP causal trail. Core-only (no tracing
# backend) so the emit is a plain stderr write that never mixes with the report.
vyges-events = { git = "https://github.com/vyges-tools/events", branch = "main", default-features = false }

[[bin]]
name = "vyges-cdc"
path = "src/main.rs"

[lib]
name = "vyges_cdc"
path = "src/lib.rs"
